# tbj-statsapp

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: tbj_statsapp_ci
tbj_statsapp/: __init__.py  api.py  config.py  info.py  news.py  standings.py  utils.py  views.py  viz.py
tbj_statsapp/static/css/: statsapp.css
tbj_statsapp/static/js/: common.js
tbj_statsapp/templates/: 404.html  base.html  index.html  leaderboards.html  player.html  standings.html  team.html  teams.html
tbj_statsapp/templates/common/: news.html  team_info.html  team_rosters.html
tbj_statsapp/templates/components/: nav.html
tbj_statsapp/templates/components/common/: news.html  player_career_stats.html  player_hitter_stats.html  player_info.html  player_multi_team_season.html  player_pitcher_stats.html  player_single_team_season.html  team_roster_hitters.html  team_roster_pitchers.html  team_rosters.html
tbj_statsapp/templates/components/standalone/: divisions.html
tbj_statsapp/templates/index/: divisions.html
tbj_statsapp/templates/standalone/: leaders.html
tbj_statsapp/tests/: test_info.py
